api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: todo-namespace
  labels:
    app: todo-api
spec:
    replicas: 1
    selector:
        matchLabels:
          app: todo-api
    template:
        metadata:
          labels:
            app: todo-api
        spec:
          containers:
          - name: todo-api
            image: only1adwy/todo-api:latest
            ports:
              - containerPort: 3000
