api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: todo-namespace
spec:
  selector:
    app: todo-api-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8070
      nodePort: 31000
  type: NodePort
